Add Price range selector

--- a/web-portal/src/app/shop/productlist/productlist.component.html
+++ b/web-portal/src/app/shop/productlist/productlist.component.html
@@ -34,8 +34,9 @@
             <div class="card-body">
               <div class="categories-list">
                 <div class="">
-                  <h4 class="">Category</h4>
+                  <h4 class="">Price Range</h4>
                 </div>
+                <ng5-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ng5-slider>
               </div>
             </div>
           </div>
