--- a/web-portal/src/app/shop/productDetail/productDetail.component.html
+++ b/web-portal/src/app/shop/productDetail/productDetail.component.html
@@ -50,8 +50,9 @@
             </ul>
             <div class="tab-content">
                 <div class="tab-pane fade active show" id="tab-1" aria-expanded="true">
-                    <p>Super charge your walk! Easy portable effortless light weight! Swing Weights were designed to be the best, most effective walking weight on the market.Use Swing Weights as you walk for a low-impact, fully body workout.</p>
-                    <p>The dumbbell material : outside is rubber,inside is cast iron . the weigth is enough .5kg is 5kg ,10kg is 10kg .we also can make client's logo on the cover.</p>
+                  <p>
+                    one more here.
+                  </p>
                 </div>
                 <div class="tab-pane fade" id="tab-2" aria-expanded="false">
                     <p> - Silver, space silver, 1.48 inch TFT LCD capacitive touch screen, 128*128 pixels Resolution; Dial- Plastic; Strap- Flexible &amp; durable
@@ -60,7 +61,7 @@
                    </p>
                 </div>
                 <div class="tab-pane fade" id="tab-3" aria-expanded="false">
-                    <p>If you are willing to buy this watch then just order it right away without any second thought. This is a watch with great tools on it. So the internals had to be pretty good. It is a watch worth every penny. I used it on a daily basis for a pretty long time and it didn't lag even once and still works like charm.</p>
+                    <p>just atest again.</p>
                 </div>
             </div>
         </div><!-- tab-style closed -->
