--- a/web-portal/src/app/shop/productDetail/productDetail.component.html
+++ b/web-portal/src/app/shop/productDetail/productDetail.component.html
@@ -36,11 +36,8 @@
 				</div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis eros lobortis, vestibulum turpis ac, pulvinar odio. Praesent vulputate a elit ac mollis. In sit amet ipsum turpis. Pellentesque venenatis, libero vel euismod lobortis, mi metus luctus augue, eget dapibus elit nisi eu massa. Phasellus sollicitudin nisl posuere nibh ultricies.</p>
 				<div class="d-flex justify-content-between">
-					<div class="align-content-start w-50 mr-3">
-						<input class="form-control form-control-lg" placeholder="1" value="1" type="number">
-					</div>
-					<div class="align-content-start w-50">
-						<a routerLink="/product-cart" class="btn btn-primary btn-lg btn-block">Add To Cart</a>
+					<div class="align-content-start">
+						<a routerLink="/product-cart" class="btn btn-primary btn-lg btn-block">Get this Book</a>
 					</div>
 				</div>
 			</div>
@@ -98,91 +95,5 @@
 				</div>
         	</div>
         </div><!-- related post closed -->
-        <div class="our-support mb-5">
-        	<div class="row no-gutters">
-        		<div class="col-sm-12 col-md-4">
-        			<div class="border-0 rounded-0 bg-light text-center">
-        				<div class="card-body p-4">
-	        				<div class="icon mb-3">
-	        					<span><i class="ion-ios-globe font-4x"></i></span>
-	        				</div>
-	        				<h5 class="text-capitalize mb-3">Free Delivery</h5>
-	        				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        				</div>
-        			</div>
-        		</div>
-        		<div class="col-sm-12 col-md-4">
-        			<div class="border-0 rounded-0 bg-light text-center">
-        				<div class="card-body p-4">
-	        				<div class="icon mb-3">
-	        					<span><i class="ion-ios-sync font-4x"></i></span>
-	        				</div>
-	        				<h5 class="text-capitalize mb-3">Refund &amp; Return</h5>
-	        				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        				</div>
-        			</div>
-        		</div>
-        		<div class="col-sm-12 col-md-4">
-        			<div class="border-0 rounded-0 bg-light text-center">
-        				<div class="card-body p-4">
-	        				<div class="icon mb-3">
-	        					<span><i class="ion-ios-chatboxes font-4x"></i></span>
-	        				</div>
-	        				<h5 class="text-capitalize mb-3">24X7 Support</h5>
-	        				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        				</div>
-        			</div>
-        		</div>
-        	</div>
-        </div><!-- our support closed -->
-        <div class="accordion-wrapper">
-			<div id="accordion" role="tablist">
-				<h4 class="text-capitalize mb-4">Frequently Asked Questions</h4>
-				<div class="simple-line-accordion pt-1">
-					<div class="card">
-						<div class="card-header" role="tab" id="headingOne">
-							<h2 class="mb-0 font-2x">
-								<a class="accordion-toggle" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-									Collapsible Group Item #1
-								</a>
-							</h2>
-						</div>
-						<div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-							<div class="card-body">
-							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-header" role="tab" id="headingTwo">
-							<h2 class="mb-0 font-2x">
-								<a class="collapsed accordion-toggle" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-									Collapsible Group Item #2
-								</a>
-							</h2>
-						</div>
-						<div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
-							<div class="card-body">
-							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non.
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-header" role="tab" id="headingThree">
-							<h2 class="mb-0 font-2x">
-								<a class="collapsed accordion-toggle" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-									Collapsible Group Item #3
-								</a>
-							</h2>
-						</div>
-						<div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
-							<div class="card-body">
-							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
-							</div>
-						</div>
-					</div>
-				</div>
-			</div><!-- accordions closed -->
-		</div>
 	</div><!-- container closed -->
 </div><!-- product wrapper closed -->
