Update footer, contact page and contact maps

--- a/web-portal/src/app/footer/footer.component.html
+++ b/web-portal/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="router?.url != '/sign-up' && router?.url != '/login' && router?.url != '/thank-you' && router?.url != '/not-found' && router?.url != '/maintenance'">
-	<div angly-callToAction heading="Want to work with us?" subHeading="Passionate web design and development since 2009." [buttonInfo]="buttonDetails"></div>
+	<div angly-callToAction heading="Want to work with us?" subHeading="Passionate about social change." [buttonInfo]="buttonDetails"></div>
 
 	<!-- Footer  -->
 	<div class="footer-wrapper pt-5">
@@ -17,7 +17,7 @@
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-4 mb-3">
 					<h4 class="mb-3 text-capitalize">Company LTD</h4>
-					<div class="address" angly-contact location="E-51, Industrial area, Phase 2 Mohali, Punjab, India." tel="(0172) 462 9900" mail="support@theironnetwork.org">
+					<div class="address" angly-contact location="Naxal Kathmandu Nepal" tel="(987) 654 3210" mail="support@bookbank.org">
 					</div>
 				</div>
 			</div>
