--- a/web-portal/src/app/contact/contact.component.html
+++ b/web-portal/src/app/contact/contact.component.html
@@ -41,10 +41,15 @@
 				<div class="google-maps">
 					<div class="mapouter">
 					   <div class="gmap_canvas">
-					   	<agm-map [latitude]="lat" [longitude]="lng" class="border-rad">
-				            <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-				        </agm-map>
-					   </div>
+               <div class="mapouter">
+                 <div class="gmap_canvas">
+                   <iframe frameborder="0" height="500" id="gmap_canvas"
+                           marginheight="0"
+                           marginwidth="0" scrolling="no" [src]="mapURL" width="677">
+                   </iframe>
+                 </div>
+               </div>
+             </div>
 					</div>
 				</div>
 			</div>
