--- a/web-portal/src/app/contact/contact.component.scss
+++ b/web-portal/src/app/contact/contact.component.scss
@@ -1,4 +1,13 @@
-agm-map {
-  width: 650px;
-  height: 730px;
+.mapouter {
+  position: relative;
+  text-align: right;
+  height: 600px;
+  width: 100%;
+}
+
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 600px;
+  width: 100%;
 }
