--- a/web-portal/src/app/widgets/callToAction/callToAction.component.html
+++ b/web-portal/src/app/widgets/callToAction/callToAction.component.html
@@ -6,8 +6,7 @@
 				<h2 class="text-white font-3x fw-bold mb-3" *ngIf="heading"> {{heading}}</h2>
 				<h3 class="text-white mb-5" *ngIf="subHeading"> {{ subHeading }}</h3>
 		        <div>
-		          <a href="javascript:void(0);" routerLinkActive="active-link" class="btn btn-outline-light btn-lg btn-chk">Get 
-		          started Today!</a>
+		          <a href="/contact" routerLinkActive="active-link" class="btn btn-outline-light btn-lg btn-chk">{{buttonInfo['title']}}</a>
 		        </div>
 			</div>
 		</div>
