--- a/web-portal/src/app/widgets/contact/homeContact/homeContact.component.html
+++ b/web-portal/src/app/widgets/contact/homeContact/homeContact.component.html
@@ -35,9 +35,9 @@
    <div class="google-maps">
       <div class="mapouter">
          <div class="gmap_canvas">
-            <agm-map [latitude]="lat" [longitude]="lng" class="border-rad">
-               <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-           </agm-map>
+           <iframe frameborder="0" id="gmap_canvas"
+                   marginheight="0" marginwidth="0"
+                   scrolling="no" [src]="mapURL" width="100%" height="500px"></iframe>
          </div>
       </div>
    </div>
