--- a/web-portal/src/app/shop/productlist/productlist.component.html
+++ b/web-portal/src/app/shop/productlist/productlist.component.html
@@ -136,10 +136,10 @@
       </div>
 			<div class="col-sm-12 col-md-8 col-lg-8 mb-3">
 				<div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-4" *ngFor="let product of productsList">
+          <div class="col-sm-6 col-md-6 col-lg-4" *ngFor="let book of books">
 						<div class="card border-0 mb-3">
 							<div class="overlay-wrap mb-4 card-shadow border-rad">
-								<img class="img-fluid border-rad w-100" [src]="product.image" alt="Card image cap" width="280" height="260" />
+								<img class="img-fluid border-rad w-100" src="/assets/img/gettyimages-173015527-612x612.jpg" alt="Card image cap" width="280" height="260" />
 								<div class="cart-icon">
 									<ul class="list-unstyled">
 										<li>
@@ -147,21 +147,15 @@
 												<i class="fa fa-heart text-danger"></i>
 											</a>
 										</li>
-										<li>
-											<a routerLink="/product-detail" class="square-40 bg-white rounded-circle text-dark card-shadow">
-												<i class="fa fa-search"></i>
-											</a>
-										</li>
 									</ul>
 								</div>
 							</div>
 							<div class="card-body p-0">
-								<h5 class="text-capitalize mb-3">{{product.title}}</h5>
-								<p>{{product.description}}</p>
-								<p class="text-primary">{{product.price | currency: 'USD' : true}}</p>
-
-							</div>
-						</div>
+								<h5 class="text-capitalize mb-3">{{book.name}}</h5>
+              </div>
+              <button *ngIf="book.is_for_rent" type="button" class="btn btn-primary btn-xs">Rent</button>
+              <button *ngIf="!book.is_for_rent" type="button" class="btn btn-primary btn-xs">Borrow</button>
+            </div>
 					</div>
 				</div>
 			</div>
