--- a/web-portal/src/app/login/login.component.html
+++ b/web-portal/src/app/login/login.component.html
@@ -6,14 +6,14 @@
           <div class="card-body">
             <hr style="border-top: 1px solid #eee;">
             <div class="row">
-              <div class="col-6">
-                <button (click)="socialSignIn('facebook')" class="loginBtn loginBtn--facebook">
-                  Login with Facebook
-                </button>
-              </div>
-              <div class="col-6 text-right">
+              <div class="col-6 text-right" *ngIf="!isLoggedIn">
                 <button (click)="socialSignIn('google')" class="loginBtn loginBtn--google">
                   Login with Google
+                </button>
+              </div>
+              <div class="col-6" *ngIf="isLoggedIn">
+                <button (click)="logOut('facebook')" class="loginBtn loginBtn--facebook">
+                  Log out
                 </button>
               </div>
               <div class="col-6 text-right">
