Remove slider on home page and rename company name

--- a/web-portal/src/app/home/home.component.html
+++ b/web-portal/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Product List wrapper -->
-<div class="product-wrapper section-gap">
+<div class="product-wrapper section-gap pt-6">
   <div class="container">
     <div class="row">
 
