--- a/web-portal/src/app/footer/footer.component.html
+++ b/web-portal/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-4 mb-3">
-					<h4 class="mb-3 text-capitalize">Company LTD</h4>
+					<h4 class="mb-3 text-capitalize">Insight Workshop</h4>
 					<div class="address" angly-contact location="Naxal Kathmandu Nepal" tel="(987) 654 3210" mail="support@bookbank.org">
 					</div>
 				</div>
