--- a/web-portal/src/app/shop/productlist/productlist.component.html
+++ b/web-portal/src/app/shop/productlist/productlist.component.html
@@ -151,7 +151,7 @@
 								</div>
 							</div>
 							<div class="card-body p-0">
-                <a [routerLink]="'/product-detail/' + book.id">
+                <a [routerLink]="'/book-detail/' + book.id">
                   <h5 class="text-capitalize mb-3">{{book.name}}</h5>
                 </a>
               </div>
