--- a/web-portal/src/app/personal-request/personal-request.component.html
+++ b/web-portal/src/app/personal-request/personal-request.component.html
@@ -46,7 +46,7 @@
               </div>
               <div class="form-group mr-4">
                 <div class="form-group">
-                  <button class="btn btn-dark btn-chk-dark inverse" type="submit">Send Messages</button>
+                  <button class="btn btn-primary" type="submit">Send Request</button>
                 </div>
               </div>
             </div>
