--- a/web-portal/src/app/request-book/request-book.component.html
+++ b/web-portal/src/app/request-book/request-book.component.html
@@ -62,7 +62,7 @@
                     class="text-danger">Image is required</span>
             </div>
             <div class="form-group">
-              <button class="btn btn-dark btn-chk-dark inverse" type="submit">Send Messages</button>
+              <button class="btn btn-primary" type="submit">Send Request</button>
             </div>
           </form>
         </div>
