--- a/web-portal/src/app/widgets/contact/sendMessage/sendMessage.component.html
+++ b/web-portal/src/app/widgets/contact/sendMessage/sendMessage.component.html
@@ -35,7 +35,7 @@
 
       </div>
       <div class="form-group">
-         <button type="submit" class="btn btn-dark btn-chk-dark inverse">Send Messages</button>
+         <button type="submit" class="btn btn-primary">Send Request</button>
       </div>
    </form>
 </div>
