--- a/web-portal/src/app/login/login.component.html
+++ b/web-portal/src/app/login/login.component.html
@@ -7,7 +7,7 @@
             <hr style="border-top: 1px solid #eee;">
             <div class="row">
               <div class="col-6 text-right" *ngIf="!isLoggedIn">
-                <button (click)="socialSignIn('google')" class="loginBtn loginBtn--google">
+                <button (click)="socialSignIn('google')" class="loginBtn loginBtn--google btn-primary">
                   Login with Google
                 </button>
               </div>
