dont remember what it does.

--- a/web-portal/src/app/header/header.component.html
+++ b/web-portal/src/app/header/header.component.html
@@ -137,7 +137,7 @@
                     class="nav-link"
                     href="/product-detail"
                     routerlinkactive="active-link">
-                    Product Detail </a></li>
+                    Book Detail </a></li>
                 </ul>
               </li>
               <li class="nav-item" menutogglelink="" routerlinkactive="open"><a
