--- a/web-portal/src/app/shop/productDetail/productDetail.component.html
+++ b/web-portal/src/app/shop/productDetail/productDetail.component.html
@@ -36,8 +36,8 @@
 				</div>
         <p>{{ bookDetail?.description }}</p>
 				<div class="d-flex justify-content-between">
-          <div class="align-content-start" *ngIf="localUser()?.logged_in_user_id">
-            <div *ngIf="bookStatus?.isRentable">
+          <div class="align-content-start" *ngIf="true || localUser()?.logged_in_user_id">
+            <div *ngIf="bookStatus?.is_rentable">
               <button class="btn btn-primary" (click)="rent(bookDetail.id)">Rent</button> &nbsp; &nbsp; &nbsp;
             </div>
             <div *ngIf="bookStatus?.is_acquirable">
@@ -46,6 +46,19 @@
             <div *ngIf="bookStatus?.message">{{  bookStatus.message }}</div>
           </div>
 				</div>
+
+        <div class="col-6 text-right">
+          <a
+            href="https://www.facebook.com/sharer/sharer.php?u=https://stackoverflow.com/questions/9120539/facebook-share-link-without-javascript&t=TITLE"
+            target="_blank" title="Share on Facebook">Share
+          </a>
+
+          <a
+            href="https://twitter.com/intent/tweet?url=http://localhost:4200/book-detail/2&t=TITLE"
+            target="_blank" title="Share on Twitter">Tweet
+          </a>
+        </div>
+
 			</div>
 		</div><!-- row closed -->
 		<div class="tab-style mb-5">
