--- a/web-portal/src/app/menu/menu.component.html
+++ b/web-portal/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
      class="navbar navbar-expand-md navbar-dark fixed-top bg-primary {{router?.url == '/home' ? '' : 'bg-primary'}}">
   <div class="container">
     <a class="navbar-brand" [routerLink]="['/', 'home']" routerLinkActive="active-link">
-      <h3>Book Bank</h3>
+      <h3>Here</h3>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
